add get/delete config request API
